# leap-climsim-kaggle-5th

./: .gitignore  README.md  pyproject.toml
inference/low-res-aqua-mixed/: Model_Submission_Final.py  inference_notebook.ipynb
inference/low-res-high-res-mixed/: high_mixed_inference.py
preprocessing/: download_data.py  mean_std_values_main.pth  process_batches.py
preprocessing/low-res-aqua-mixed/: README.md  download_data.py  process_batches.py
preprocessing/low-res-high-res-mixed/: Preprocessing_Step1_Highres.py  Preprocessing_Step1_Lowres.py  Preprocessing_Step2_1e-15.py  README.md
training/low-res-acqua-mixed/: lowres_tune_1.py  lowres_tune_3.py
training/low-res-aqua-mixed/: README.md  base_model.py  lowres_tune_2.py  model_with_features.py  train_mix.ipynb
training/low-res-high-res-mixed/: training.ipynb
utils/: constants.py  utils.py
