[tool.poetry]
name = "leap"
version = "0.1.0"
description = ""
authors = ["YusefAN <yusef.alnaher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.2.5"
polars = "^0.20.30"
numpy = "^1.26.4"
pandas = "^2.2.2"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
mlflow = "^2.13.0"
optuna = "^3.6.1"
optuna-integration = "^3.6.0"
lightning = "^2.2.5"
beautifulsoup4 = "^4.12.3"
lightgbm = "^4.3.0"
pytorch-tcn = "^1.1.0"
catboost = "^1.2.5"
hopfield-layers = {git = "https://github.com/ml-jku/hopfield-layers"}
vastai = "^0.2.2"
nbformat = "^5.10.4"
xarray = "^2024.6.0"
netcdf4 = "^1.7.1.post1"
sparsemax = "^0.1.9"
tfrecord = "^1.14.4"
protobuf = "3.20.*"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
